--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,14 +8,15 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Beth+Ellen&display=swap" rel="stylesheet">
   <title>React Reading List</title>
 </head>
 
-<body>
+<body style="font-family: 'Beth Ellen', cursive">
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <div id="root"></div>
+  <div id="root" style="font-family: 'Beth Ellen', cursive;"></div>
 </body>
 
 </html>
