--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,11 +12,11 @@
   <title>React Reading List</title>
 </head>
 
-<body style="font-family: 'Beth Ellen', cursive">
+<body>
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <div id="root" style="font-family: 'Beth Ellen', cursive;"></div>
+  <div id="root"></div>
 </body>
 
 </html>
