--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,8 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
-  <title>React Reading List</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  <title>Dónde Ayudar</title>
 </head>
 
 <body style="font-family: 'Nanum Gothic', sans-serif;">
